--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -62,67 +62,71 @@
         </template>
 
 
+
+        <!--
+        <div class="row">
+            <div class="col-xs-5  text-center">
+            <div class="col-xs-1" />
+            <div class="col-xs-6">
+        </div>
+        -->
+
+
         <!-- Entête personnalisé Plastigray -->
         <template id="is_report_invoice_external_layout_header">
             <div class="header">
-
-                <div class="row">
-                    <div class="col-xs-4  text-center">
-                        <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
-                        <div class="expediteur">
-                            S.A.S. au capital de 2 102 400 € <br />
-                            Siège social : ZAC de Gray Sud <br />
-                            CS 10133 - <b>70104 GRAY Cedex</b><br />
-                            Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
-                            Siret B 377 846 381 00020 - Code NAF 2229 A <br />
-                            Registre du Commerce GRAY <br />
-                            N°Identification T.V.A. FR 65 377 846 381 <br />
-                            <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
-                            <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
-                            <span t-field="o.partner_id.is_cofor"/>
-                        </div>
-                    </div>
-                    <div class="col-xs-1" />
-
-                    <div class="col-xs-7">
-                        <div class="titre">
-
-                            <t t-if="o.type == 'out_invoice'">
-                                <span t-if="o.partner_id.lang == 'fr_FR'">FACTURE N°</span>
-                                <span t-if="o.partner_id.lang != 'fr_FR'">INVOICE N°</span>
-                            </t>
-                            <t t-if="o.type == 'out_refund'">
-                                <span t-if="o.partner_id.lang == 'fr_FR'">AVOIR N°</span>
-                                <span t-if="o.partner_id.lang != 'fr_FR'">AVOIR N°</span>
-                            </t>
-
-                            <span t-field="o.internal_number"/>
-                             du <span t-field="o.date_invoice"  t-field-options='{"format": "dd/MM/yyyy"}' /><br />
-                        </div>
-
-                        <div>
-                            <span t-if="o.partner_id.lang == 'fr_FR'">Échéance :</span>
-                            <span t-if="o.partner_id.lang != 'fr_FR'">Due Date :</span>
-                            <span t-field="o.date_due"  t-field-options='{"format": "dd/MM/yyyy"}' />
-                        </div>
-
-
-
-                        <b>
-                            <div t-if="o.partner_id.lang == 'fr_FR'">Nom du client et adresse de facturation : </div>
-                            <div t-if="o.partner_id.lang != 'fr_FR'">Name of client and invoicing adress : </div>
-                        </b>
-                        <div class="destinataire">
-                            <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>/<span t-field="o.partner_id.is_adr_code"/>)
-                            <div t-field="o.partner_id"
-                                 t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
-                            <div t-if="o.partner_id.vat">VAT : <span t-field="o.partner_id.vat"/></div>
-                        </div>
-
-                    </div>
-
-                </div>
-
+                <table style="width:100%;border:0pt">
+                    <tr>
+                        <td style="width:40%;border:0pt">
+                            <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
+                            <div class="expediteur">
+                                S.A.S. au capital de 2 102 400 € <br />
+                                Siège social : ZAC de Gray Sud <br />
+                                CS 10133 - <b>70104 GRAY Cedex</b><br />
+                                Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
+                                Siret B 377 846 381 00020 - Code NAF 2229 A <br />
+                                Registre du Commerce GRAY <br />
+                                N°Identification T.V.A. FR 65 377 846 381 <br />
+                                <span t-if="o.partner_id.lang == 'fr_FR'">Fournisseur N°</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">Supplier N°</span>
+                                <span t-field="o.partner_id.is_cofor"/>
+                            </div>
+                        </td>
+                        <td style="width:5%;border:0pt">
+                        </td>
+                        <td style="width:55%;border:0pt">
+                            <div class="titre">
+                                <t t-if="o.type == 'out_invoice'">
+                                    <span t-if="o.partner_id.lang == 'fr_FR'">FACTURE N°</span>
+                                    <span t-if="o.partner_id.lang != 'fr_FR'">INVOICE N°</span>
+                                </t>
+                                <t t-if="o.type == 'out_refund'">
+                                    <span t-if="o.partner_id.lang == 'fr_FR'">AVOIR N°</span>
+                                    <span t-if="o.partner_id.lang != 'fr_FR'">AVOIR N°</span>
+                                </t>
+                                <span t-field="o.internal_number"/>
+                                 du <span t-field="o.date_invoice"  t-field-options='{"format": "dd/MM/yyyy"}' /><br />
+                            </div>
+                            <div>
+                                <span t-if="o.partner_id.lang == 'fr_FR'">Échéance :</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">Due Date :</span>
+                                <span t-field="o.date_due"  t-field-options='{"format": "dd/MM/yyyy"}' />
+                            </div>
+                            <!-- Positionnement de l'adresse dans le cadre de l'enveloppe -->
+                            <div style="height:30mm"> </div> 
+                            <b>
+                                <div t-if="o.partner_id.lang == 'fr_FR'">Nom du client et adresse de facturation : </div>
+                                <div t-if="o.partner_id.lang != 'fr_FR'">Name of client and invoicing adress : </div>
+                            </b>
+                            <div class="destinataire">
+                                <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>/<span t-field="o.partner_id.is_adr_code"/>)
+                                <div t-field="o.partner_id"
+                                     t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
+                                <div t-if="o.partner_id.vat">VAT : <span t-field="o.partner_id.vat"/></div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </template>
 
