--- a/views/report_purchaseorder.xml
+++ b/views/report_purchaseorder.xml
@@ -72,67 +72,70 @@
 <!-- Entête personnalisé Plastigray -->
 <template id="report_purchaseorder_external_layout_header">
     <div class="header">
-        <div class="row">
-            <div class="col-xs-4  text-left">
-                <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
-                <div class="livraison">
-                    <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de livraison : </span>
-                    <span t-if="o.partner_id.lang != 'fr_FR'">Delevery Address : </span>
-                    <br />
-                    <t t-if="not o.is_livre_a_id">
-                        <span t-field="company.name"/> <span t-field="company.street"/><br />
-                        <span t-field="company.street2"/><br />
-                        <span t-field="company.zip"/> <span t-field="company.city"/><br /><br />
-                    </t>
-                    <t t-if="o.is_livre_a_id">
-                        <span t-field="o.is_livre_a_id.name"/> <span t-field="o.is_livre_a_id.street"/><br />
-                        <t t-if="o.is_livre_a_id.street2"><span t-field="o.is_livre_a_id.street2"/><br /></t>
-                        <span t-field="o.is_livre_a_id.zip"/> <span t-field="o.is_livre_a_id.city"/><br /><br />
-                    </t>
-                </div>
-                <div class="facturation">
-                    <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de facturation : </span>
-                    <span t-if="o.partner_id.lang != 'fr_FR'">Invoicing Address : </span>
-                    PLASTIGRAY SAS <br />
-                    ZAC de Gray Sud CS 10133 <br />
-                    70104 GRAY Cedex
-                </div>
-            </div>
-            <div class="col-xs-1" />
-            <div class="col-xs-7">
-                <div class="titre">
-                    <span t-if="o.partner_id.lang == 'fr_FR'">Commande ferme N°</span>
-                    <span t-if="o.partner_id.lang != 'fr_FR'">Order N°</span>
-                    <span style="font-size:12pt;" t-field="o.name"/> 
-                    <span style="font-size:12pt;" t-esc="datetime.datetime.strptime(o.date_order, '%Y-%m-%d %H:%M:%S').strftime('%d/%m/%Y')"/>
-                    <br />
-                </div>
-                <div class="fournisseur">
-                    <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
-                    <div t-field="o.partner_id"
-                         t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
-                </div>
-            </div>
-        </div><br />
-        <div class="row">
-            <div class="col-xs-8">
-                <t t-if="o.is_demandeur_id">
-                    Contact : <b><span t-field="o.is_demandeur_id.name"/> / <span t-field="o.is_demandeur_id.partner_id.email"/> </b><br />
-                </t>
-                <i>
-                <span t-if="o.partner_id.lang == 'fr_FR'">Conditions de paiement : </span>
-                <span t-if="o.partner_id.lang != 'fr_FR'">Conditions of payment : </span>
-                <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
-                <span t-if="o.partner_id.lang == 'fr_FR'">Type de réglement : </span>
-                <span t-if="o.partner_id.lang != 'fr_FR'">Type of payment : </span>
-                <span t-field="o.partner_id.is_type_reglement.name"/> <br />
-                </i>
-            </div>
-            <div class="col-xs-4">
-                <div t-if="o.partner_id.is_incoterm">Incoterm : <span t-field="o.partner_id.is_incoterm.name"/></div>
-                <div t-if="o.get_da()">Devis : <t t-esc="o.get_da()"/></div>
-            </div>
-        </div>
+        <table style="width:100%;border:0pt">
+            <tr>
+                <td style="width:45%;border:0pt">
+                    <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
+                    <div class="livraison">
+                        <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de livraison : </span>
+                        <span t-if="o.partner_id.lang != 'fr_FR'">Delevery Address : </span>
+                        <br />
+                        <t t-if="not o.is_livre_a_id">
+                            <span t-field="company.name"/> <span t-field="company.street"/><br />
+                            <span t-field="company.street2"/><br />
+                            <span t-field="company.zip"/> <span t-field="company.city"/><br /><br />
+                        </t>
+                        <t t-if="o.is_livre_a_id">
+                            <span t-field="o.is_livre_a_id.name"/> <span t-field="o.is_livre_a_id.street"/><br />
+                            <t t-if="o.is_livre_a_id.street2"><span t-field="o.is_livre_a_id.street2"/><br /></t>
+                            <span t-field="o.is_livre_a_id.zip"/> <span t-field="o.is_livre_a_id.city"/><br /><br />
+                        </t>
+                    </div>
+                    <div class="facturation">
+                        <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de facturation : </span>
+                        <span t-if="o.partner_id.lang != 'fr_FR'">Invoicing Address : </span>
+                        PLASTIGRAY SAS <br />
+                        ZAC de Gray Sud CS 10133 <br />
+                        70104 GRAY Cedex
+                    </div>
+                </td>
+                <td style="width:5%;border:0pt">
+                </td>
+                <td style="width:50%;border:0pt">
+                    <div class="titre">
+                        <span t-if="o.partner_id.lang == 'fr_FR'">Commande ferme N°</span>
+                        <span t-if="o.partner_id.lang != 'fr_FR'">Order N°</span>
+                        <span style="font-size:12pt;" t-field="o.name"/> 
+                        <span style="font-size:12pt;" t-esc="datetime.datetime.strptime(o.date_order, '%Y-%m-%d %H:%M:%S').strftime('%d/%m/%Y')"/>
+                        <br />
+                    </div>
+                    <div style="height:45mm;border:0px solid black">
+                        <br />
+                        <t t-if="o.is_demandeur_id">
+                            Contact : <b><span t-field="o.is_demandeur_id.name"/> / <span t-field="o.is_demandeur_id.partner_id.email"/> </b><br />
+                        </t>
+                        <i>
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Conditions de paiement : </span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Conditions of payment : </span>
+                            <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Type de réglement : </span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Type of payment : </span>
+                            <span t-field="o.partner_id.is_type_reglement.name"/> 
+                        </i>
+                        <br />
+                        <p t-if="o.partner_id.is_incoterm">Incoterm : <span t-field="o.partner_id.is_incoterm.name"/></p>
+                        <br />
+                        <p t-if="o.get_da()">Devis : <t t-esc="o.get_da()"/></p>
+                    </div>
+
+                    <div class="fournisseur">
+                        <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
+                        <div t-field="o.partner_id"
+                             t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 </template>
 
