--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -121,13 +121,21 @@
                     </div>
                 </div><br />
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-8">
                         Contact : <b><span t-field="o.demandeur_id.name"/> / <span t-field="o.demandeur_id.partner_id.email"/> </b><br />
                         <i>
                         Conditions de paiement :  <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
                         Type de réglement :       <span t-field="o.partner_id.is_type_reglement.name"/> <br />
                         Incoterm :                <span t-field="o.partner_id.is_incoterm.name"/> <br />
                         </i>
+                    </div>
+                    <div class="col-xs-4">
+                        <t t-if="o.message">
+                            <p>
+                                Message :<br />
+                                <b><span t-field="o.message"/></b>
+                            </p>
+                        </t>
                     </div>
                 </div>
             </div>
