--- a/report/is_livraison_gefco.xml
+++ b/report/is_livraison_gefco.xml
@@ -32,6 +32,7 @@
                 <field name="is_date_expedition" />
                 <field name="partner_id"           widget="many2one_clickable"/>
                 <field name="picking_id"           widget="many2one_clickable"/>
+                <field name="client_order_ref" />
                 <field name="is_mold_dossierf" />
                 <field name="product_id"           widget="many2one_clickable"/>
                 <field name="uc" />
@@ -56,7 +57,7 @@
         </field>
     </record>
     <record id="is_livraison_gefco_action" model="ir.actions.act_window">
-        <field name="name">Livraison GEFCO</field>
+        <field name="name">Livraison GEFBOX</field>
         <field name="res_model">is.livraison.gefco</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
